--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "material-design-icons": "^3.0.1",
     "mitt": "^3.0.0",
     "sweetalert2": "^11.1.5",
+    "swiper": "^6.7.5",
     "vee-validate": "^4.4.10",
     "vue": "^3.0.0",
     "vue-axios": "^3.2.5",
